--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+
 body{
     --color-bg: #dddddd;
-    --color-text: #730233;
+    --color-text: #222622;
 }
 
 body.dark-theme{
-    --color-bg: #585858;
-    --color-text: #023373;
+    --color-bg: #222622;
+    --color-text: #dddddd;
 }
 
 @media (prefers-color-scheme: dark) {
     body{
-        --color-bg: #585858;
-        --color-text: #023373;
+		--color-bg: #222622;
+        --color-text: #dddddd;
     }
     body.light-theme{
         --color-bg: #dddddd;
-        --color-text: #730233;
+        --color-text: #222622;
     }
-    
-  }
+}
   
 body{
-    background-color: var(--color-bg);
+	background-color: var(--color-bg);
+	font-family: 'Cabin', sans-serif;
     color:#fff;
 	font-size: 16px;
 }
@@ -39,17 +41,34 @@ h1{
 }
 
 
+.modeWrapper{
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+.btn{
+	display: flex;
+	text-align: center;
+	justify-content: center;
+    border-radius: 5pt;
+	font-family: 'Cabin', sans-serif;
+	font-size: 16px;
+	width: 150px;
+	height: auto;
+	margin: 20px;
+}
 
 .wrap {
 	width: 90%;
 	max-width: 1000px;
-	/*margin:auto;*/
 }
 
 .widget {
 	width: 40%;
 	margin: 2em;
-	/*margin:32px; */
 }
 
 .widget p {
